# Zenorak

./: readme.MD
Actuator_final_v1_dec30/: Actuator_final_v1_dec30.ino
Firmware/src/: main.cpp
Motor_firmware_v1_dec30/: Motor_firmware_v1_dec30.ino
servo_service/: CMakeLists.txt  package.xml  setup.cfg  setup.py
servo_service/servo_service/: servo_node.py
zenorak_bringup/: SetServoAngle.srv  servo_node.py
zenorak_controller_actuator/: CMakeLists.txt  README.md  README_og.md  package.xml  zenorak_controller_actuator.xml
zenorak_controller_actuator/doc/: userdoc.rst
zenorak_controller_actuator/hardware/: diffbot_system.cpp
zenorak_controller_motor/: CMakeLists.txt  README.md  package.xml  zenorak_controller_motor.xml
zenorak_controller_motor/bringup/config/: diffbot_controllers.yaml
zenorak_controller_motor/bringup/launch/: diffbot.launch.py
zenorak_controller_motor/description/launch/: view_robot.launch.py
zenorak_controller_motor/description/ros2_control/: diffbot.ros2_control.xacro
zenorak_controller_motor/description/urdf/: diffbot.urdf.xacro
zenorak_controller_motor/doc/: userdoc.rst
zenorak_controller_motor/hardware/: diffbot_system.cpp
zenorak_controller_motor/hardware/include/zenorak_controller_motor/: Actuator.hpp  arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
zenorak_ros2_control/: CMakeLists.txt  README.md
zenorak_ros2_control/config/: actuator_controller.yaml  controller.yaml  joy_teleop.yaml  joystick.yaml  motor_controller.yaml  teleop_twist_joy.yaml  twist_mux_topics.yaml
zenorak_ros2_control/description/: materials.xacro  ros2_control.xacro  zenorak.gazebo  zenorak.ros2control  zenorak.xacro
zenorak_ros2_control/launch/: joystick_robot.launch.py  launch_robot.launch.py  rsp.launch.py
zenorak_ros2_control/meshes/: base_link.STL  front_wheel_right_part.STL  link_3_part.STL  linkk_1_part.STL  manipulator_base_part.STL
zenorak_ros2_control/scripts/: arm_sequences.py  demo_trajectory.py  demo_twist.py  joy_control.py  manipulator_joystick.py  servo_call.py  verify_launch.sh
zenorak_teleop/: CMakeLists.txt
zenorak_teleop/launch/: joypad.launch.py
(+26 files in other folders)
